@@ -46,28 +46,19 @@ IT IS DONE FOR YOU.
 <h2>Description</h2>
 
 
-   kssearch compares query sequences with databases utilizing
-   SSEARCH (Smith-Waterman Search).
-   SSEARCH does a rigorous Smith-Waterman search for similarity between
-   a query sequence and a group of sequences of the same type (nucleid acid
-   or protein).
+   kssearch compares query sequences with databases utilizing SSEARCH (Smith-Waterman Search). <br />
+   SSEARCH does a rigorous Smith-Waterman search for similarity between a query sequence and a group of sequences of the same type (nucleid acid or protein).
 </p>
 
-<p>   kssearch utilizes SSEARCH method included in FASTA SOAP service provided by<br />
-   EBI (European Bioinformatics Institute).Original web-service is located at the
-   following URL:
+<p> 
+   kssearch utilizes SSEARCH method included in FASTA SOAP service provided by  EBI (European Bioinformatics Institute).Original web-service is located at the following URL:
 </p>
 
-<p>   http://www.ebi.ac.uk/Tools/webservices/services/sss/fasta_soap
-</p>
+<p>   http://www.ebi.ac.uk/Tools/webservices/services/sss/fasta_rest   </p>
 
-<p>   This tools is a subset of Keio Bioinformatics Web Service (KBWS) package,
-   which contains interfaces to bioinformatics web services through a proxy
-   server at Keio University. kssearch is thus an interface of "runSSearch"
-   method included in KBWS SOAP service.
-   This method can be alternatively accessed directly from programming languages
-   as SOAP web service. Please refer to the KBWS online documentations
-   http://soap.g-language.org/kbws/ for more information.
+<p> 
+   This tools is a subset of Keio Bioinformatics Web Service (KBWS) package, which contains interfaces to bioinformatics web services through a proxy server at Keio University. kssearch is an interface of "runSSearch" method included in KBWS SOAP service.<br />
+   This method can be alternatively accessed directly from programming languages as SOAP web service. Please refer to the KBWS online documentations http://soap.g-language.org/kbws/ for more information.
 </p>
 
 <p>
